--- a/Frontend/src/App.scss
+++ b/Frontend/src/App.scss
@@ -12,11 +12,15 @@
   }
   
   .app__container {
-    width: 100%;
-    min-height: 100vh;
+    width: 85%;
+    min-height: 90vh;
+    border: red solid 1px;
   
     display: flex;
     flex-direction: row;
+    @media screen and (max-width: 700px) {
+      width: 100%;
+    }
   }
   
   .app__flex {
