--- a/Frontend/src/App.scss
+++ b/Frontend/src/App.scss
@@ -12,9 +12,9 @@
   }
   
   .app__container {
-    width: 85%;
-    min-height: 90vh;
-    border: red solid 1px;
+    width: 100%;
+    min-height: 100vh;
+ 
   
     display: flex;
     flex-direction: row;
@@ -34,6 +34,9 @@
     width: 100%;
     flex-direction: column;
     padding: 4rem 2rem;
+    color: #475569;
+
+    
   
     @media screen and (max-width: 450px) {
       padding: 4rem 1rem 2rem;
@@ -157,6 +160,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: auto;
+  
   
     padding: 1rem;
   
