--- a/Frontend/src/Components/Sections/About/About.scss
+++ b/Frontend/src/Components/Sections/About/About.scss
@@ -1,13 +1,12 @@
 .app__about{
-    min-height: 100vh;
-    background-image: url("../src/Assets/About&skillsBg.png");
-    background-repeat: repeat;
-    background-size: cover;
+    padding: 0 1rem;
     color: var(--gray-color);
     
-    width: 100vw;
-    padding: 2rem;
+    
+
+  
 
  
 }
+
 
