--- a/Frontend/src/App.scss
+++ b/Frontend/src/App.scss
@@ -185,9 +185,8 @@
     }
   }
   
-  @media screen and (max-width: 500px) {
-    .app__navigation,
-    .app__social {
+  @media screen and (max-width: 768px) {
+    .app__navigation{
       display: none;
     }
   
