--- a/Frontend/src/Components/Sections/Contact/Contact.scss
+++ b/Frontend/src/Components/Sections/Contact/Contact.scss
@@ -11,7 +11,7 @@
    
 
     img{
-        width: 250px;
+        width: 230px;
 
         @media screen and (max-width:390px) {
             width: 170px;
@@ -39,6 +39,44 @@
 }
 
 .app__contact-form{
-    
+    width: 65%;
     flex-direction: column;
+    margin: 1rem 2rem;
+
+    @media screen and (min-width:1200px) {
+        width: 40%;
+    }
+
+
+    div{
+        width: 100%;
+        margin: 0.75rem;
+        cursor: pointer;
+        border-radius: 10px;
+    
+
+        transition: all 0.3s ease-in-out;
+
+        input, textarea{
+            width: 100%;
+            padding: 1rem;
+            border: none;
+            border-radius: 10px;
+            background-color: #0284C720;
+
+            outline: none;
+            &:hover {
+                box-shadow: 0 0 2px var(--gray-color);
+            }
+        }
+
+        textarea{
+            height: 150px;
+
+           
+        }
+
+       
+
+    }
 }
