--- a/Frontend/src/Components/Sections/Projects/Projects.scss
+++ b/Frontend/src/Components/Sections/Projects/Projects.scss
@@ -29,7 +29,7 @@
 
     @media (min-width: 1024px) {
         border: #475569 3px solid;
-        background-image: url("../src/Assets/Projectcontainer.png");
+        background-image: url("../../Images/Projectcontainer.png");
         background-size: 'cover';
         background-repeat: 'repeat';
  
